--- a/style.css
+++ b/style.css
@@ -13,14 +13,27 @@ body {
   width: 100%;
   background-color: #4a7856;
   text-align: end;
+  padding-top: 15px;
   position: absolute;
 }
 .top-bar a {
   padding-right: 30px;
+  text-decoration: none;
 }
 
+/* WIP- TEST AFTER EXAM */
+.top-bar a:link,
+.top-bar a:active,
+.top-bar a:hover,
+.top-bar a:visited {
+  text-decoration: none;
+}
+/* a:visited { text-decoration: none; }
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; } */
+
 #tp-button {
-  padding-right: 50px;
+  padding-right: 100px;
 }
 
 .top-left-bar {
@@ -30,7 +43,7 @@ body {
   position: absolute;
   z-index: 1;
 }
-.top-left-bar h2 {
+.top-left-bar h1 {
   color: white;
   padding-top: 30px;
   text-align: center;
@@ -43,6 +56,24 @@ body {
   height: 450px;
   position: absolute;
   left: 30%;
+}
+
+.top-right-down-bar p {
+  color: red;
+  z-index: 3;
+  overflow: visible;
+  margin-left: 30px;
+}
+
+#namep1 {
+  margin-top: 200px;
+  padding-top: 30px;
+}
+
+#aboutme {
+  display: grid;
+  padding-top: 30px;
+  padding-left: 30px;
 }
 
 .main-part {
@@ -67,18 +98,39 @@ body {
   display: inline-block;
   padding-left: 5%;
   padding-right: 5%;
-  width: 200px;
-  height: 500px;
+  width: 250px;
+  height: 400px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.pictures img {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
 }
 
 .pictures p {
-  padding-left: 100px;
   text-align: center;
-  font-size: 0.9em;
+  font-size: 1.2em;
 }
 
 #img1:hover,
 #img2:hover,
 #img3:hover {
+  display: inline-block;
   cursor: pointer;
+  border-radius: 20px;
+}
+
+#img3-overlay {
+  top: 500px;
+}
+
+#img3-overlay:hover {
+  top: 500px;
+  position: absolute;
+  background: rgba(135, 132, 132, 0.336);
+  box-shadow: 0 0 70px 5px rgba(95, 187, 229, 0.562);
+  transition: box-shadow 0.3s;
 }
