--- a/style.css
+++ b/style.css
@@ -28,10 +28,13 @@ img {
   align-content: center;
 }
 
+/* WIP: span  */
+
 #container-tl1 {
+  font-size: 20px;
   color: #8e6147;
   width: fit-content;
-  padding-left: 30px;
+  padding-left: 50px;
   padding-right: 30px;
 }
 
@@ -44,12 +47,13 @@ img {
 }
 
 #container-tl2 h3 {
+  font-size: 20px;
   padding-left: 10%;
   color: #8e6147;
   opacity: 1;
 }
 
-#hover-3 {
+#in-container-tl2 {
   padding-left: 2%;
   padding-right: 2%;
   padding-bottom: 2%;
@@ -66,7 +70,7 @@ img {
     background-position 0.3s calc(0.3s - var(--t, 0s));
 }
 
-#hover-3:hover {
+#in-container-tl2:hover {
   --p: 101%;
   --t: 0.3s;
   color: #fff;
@@ -193,10 +197,6 @@ img {
   background-image: none;
   opacity: 1;
   color: #ffffff;
-}
-
-#container-bl h4 {
-  margin-bottom: %;
 }
 
 #container-bl:hover ul {
